# madlibs_api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  manage.py  pyproject.toml  requirements.txt
backend/: Dockerfile  manage.py  pyproject.toml
backend/apps/ai/: urls.py  views.py
backend/apps/api/: urls.py  views.py
backend/apps/base/services/: mistral.py
backend/apps/game/: views.py
backend/apps/game/game_data/: templates.json
backend/apps/stories/: urls.py  views.py
backend/game/: views.py
backend/madlibs_ai/: asgi.py  settings.py  urls.py  wsgi.py
backend/madlibs_api/: asgi.py  settings.py  urls.py
backend/madlibs_api/templates/: base.html
frontend/: Dockerfile  README.md  package.json  pnpm-lock.yaml  vite.config.js
frontend/assets/js/: script.js
frontend/jquery/: index.html  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/css/: base.css  components.css  fonts.css  main.css  theme.css  transitions.css  utilities.css
frontend/src/components/: Footer.vue  Header.vue  InputPanel.vue
frontend/src/stores/: game.js  ui.js
frontend/src/utils/: axiosConfig.js  localStorage.js
frontend/src/views/: HomeView.vue
game/: serializers.py
jquery/assets/css/: style.css
madlibs_api/: settings.py  urls.py  views.py  wsgi.py
madlibs_api/templates/: base.html
staticfiles/: staticfiles.json
vue/: pnpm-lock.yaml
vue/src/stores/: counter.js
vue/src/views/: HomeView.vue
